--- a/giphy/src/main/res/layout/giphy_item.xml
+++ b/giphy/src/main/res/layout/giphy_item.xml
@@ -27,8 +27,7 @@
             android:id="@+id/review_item_movie_title_textview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
+            android:padding="8dp"
             android:gravity="center"
             android:textColor="@android:color/black"
             android:textStyle="bold"
@@ -38,63 +37,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="Movie Title" />
-
-        <TextView
-            android:id="@+id/review_item_mpaa_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/review_item_movie_title_textview"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:text="R" />
-
-        <TextView
-            android:id="@+id/review_item_headline_textview"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:textStyle="bold"
-            android:textAllCaps="true"
-            android:maxLines="1"
-            app:layout_constraintTop_toBottomOf="@+id/review_item_mpaa_textview"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Headline" />
-
-        <TextView
-            android:id="@+id/review_item_byline_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/review_item_headline_textview"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="Jeffrey Chang" />
-
-        <TextView
-            android:id="@+id/review_item_date_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/review_item_byline_textview"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="November 13th" />
-
-        <TextView
-            android:id="@+id/review_item_desc_textview"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@+id/review_item_date_textview"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Movie description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
