--- a/giphy/src/main/res/layout/activity_giphy_search.xml
+++ b/giphy/src/main/res/layout/activity_giphy_search.xml
@@ -2,10 +2,8 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <fragment
         android:id="@+id/activity_main_nav_host_fragment"
