--- a/giphy/src/main/res/layout/giphy_item.xml
+++ b/giphy/src/main/res/layout/giphy_item.xml
@@ -13,18 +13,18 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/review_item_profile_image_view"
+            android:id="@+id/giphy_item_profile_image_view"
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
-            android:contentDescription="@string/movie_desc"
+            android:contentDescription="@string/search_items_desc"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:src="@color/muteGrey" />
 
         <TextView
-            android:id="@+id/review_item_movie_title_textview"
+            android:id="@+id/giphy_item_gif_title_textview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="8dp"
@@ -33,10 +33,10 @@
             android:textStyle="bold"
             android:ellipsize="end"
             android:maxLines="1"
-            app:layout_constraintTop_toBottomOf="@id/review_item_profile_image_view"
+            app:layout_constraintTop_toBottomOf="@id/giphy_item_profile_image_view"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Movie Title" />
+            tools:text="Gif Title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
